Fix bug of calc height for rightWrap

--- a/src/containers/course/courseLayout.module.scss
+++ b/src/containers/course/courseLayout.module.scss
@@ -25,7 +25,7 @@
 .rightWrap {
   width: 100%;
   // height: 100%;
-  height: calc(100% - 40px - 100vw / 16 * 9);
+  height: calc(100% - 100vw / 16 * 9);
   position: relative;
   // border-left: 1px solid #cacaca;
   display: flex;
